# dssp-protocol

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  rfc.md
.github/workflows/: ci.yml
examples/bank-statement-extraction/: audit-trail.json  contract.json  manifest.json  result.json
examples/implement-your-own-agent/: README.md  agent.py  requirements.txt
reference/: docker-compose.gramine.yml  docker-compose.sgx.yml  docker-compose.yml
reference/agent/: Dockerfile.gramine  attestation.py  main.py  requirements.txt
reference/agent/gramine/: python.manifest.template
reference/conformance/: README.md  conftest.py  pyproject.toml
reference/conformance/tests/: test_ai_safe.py  test_attested.py  test_core_audit.py  test_core_contract.py  test_core_pii.py  test_core_schema.py  test_sovereign.py
reference/gateway/: Dockerfile  README.md  go.mod  go.sum  main.go  main.py
reference/gateway/internal/attestation/: nitro.go  sgx.go  verifier.go  verifier_test.go
reference/gateway/internal/audit/: chain.go
reference/gateway/internal/canonical/: json.go
reference/gateway/internal/handler/: contract_enforcement.go  dashboard.go  handler.go
reference/gateway/internal/storage/: adapter.go  minio.go  noop.go
reference/gateway/internal/store/: store.go
reference/gateway/internal/types/: types.go
reference/sandbox/: README.md  docker-compose.yml
reference/sandbox/agent-demo/: Dockerfile  demo_agent.py
reference/sandbox/audit-viewer/: Dockerfile  viewer.py
reference/sandbox/sample-data/: README.md
reference/scanner/: pyproject.toml
reference/scanner/dsp_scanner/: __init__.py  cli.py  llm_filter_scanner.py  ner_scanner.py  regex_scanner.py  scanner.py  statistical_scanner.py
reference/scanner/dssp_scanner/: __init__.py  cli.py  llm_filter_scanner.py  ner_scanner.py  regex_scanner.py  scanner.py  statistical_scanner.py
reference/scanner/tests/: test_regex_scanner.py  test_statistical_scanner.py
reference/setup/: Dockerfile  init.py
reference/setup/sample-data/: chase-statement-dec2025.txt  ing-statement-dec2025.txt
reference/sidecar/: Dockerfile  README.md  pyproject.toml
reference/sidecar/dsp_sidecar/: __init__.py  main.py  monitor.py  verifier.py
reference/sidecar/dssp_sidecar/: __init__.py  main.py  monitor.py  verifier.py
reference/sidecar/tests/: test_verifier.py
reference/storage-adapters/minio/: README.md  adapter.go  adapter_test.go  go.mod
reference/test-vectors/canonical-json/: rfc8785-basic.json
reference/test-vectors/hash-computation/: event-hash.json
reference/test-vectors/merkle-chain/: three-event-chain.json
reference/test-vectors/numeric-precision/: rounding.json
reference/test-vectors/pii-redaction/: hash_sha256.json  mask_last_4.json  suppress.json
reference/test-vectors/sub-agent-chain/: valid-chain.json
reference/validator/: requirements.txt  validate.py
schemas/: audit-event.schema.json  common.schema.json  contract.schema.json  manifest.schema.json  result.schema.json  storage-binding.schema.json
spec/: dsp-api-v0.1.yaml  dsp-v0.1.md  dssp-api-v0.1.yaml  dssp-v0.1.md
