[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dsp-conformance"
version = "0.1.0"
description = "Conformance test suite for the Document Sovereignty Protocol"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "jsonschema>=4.20.0",
    "referencing>=0.31.0",
    "requests>=2.31.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "core: DSP Core conformance tests",
    "attested: DSP Attested conformance tests",
    "ai_safe: DSP AI-Safe conformance tests",
    "sovereign: DSP Sovereign conformance tests",
]
