[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dssp-conformance"
version = "0.1.0"
description = "Conformance test suite for the Document Sovereignty Protocol & Privacy"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "jsonschema>=4.20.0",
    "referencing>=0.31.0",
    "requests>=2.31.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "core: DSSP Core conformance tests",
    "attested: DSSP Attested conformance tests",
    "ai_safe: DSSP AI-Safe conformance tests",
    "sovereign: DSSP Sovereign conformance tests",
]
