[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dsp-scanner"
version = "0.1.0"
description = "Reference result scanner for the Document Sovereignty Protocol"
requires-python = ">=3.10"
dependencies = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
dsp-scan = "dsp_scanner.cli:main"
