[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dsp-sidecar"
version = "0.1.0"
description = "Reference sidecar verifier for the Document Sovereignty Protocol"
requires-python = ">=3.10"
dependencies = [
    "psutil>=5.9.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
dsp-sidecar = "dsp_sidecar.main:main"
